# SimpleGameFramework

./: CMakeLists.txt  README.md
Include/SGF/: Defines.h
Include/SGF/Window/: WindowManager.h
Source/: CMakeLists.txt
Source/Platform/SDL2/: SDL2WindowManager.cpp  SDL2WindowManager.h
Source/Test/: WindowTest.cpp
